<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="10dp"
    tools:context=".GenerateTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxLower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:text="@string/lower_case"
                android:textColor="@color/primaryTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxUpper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:text="@string/upper_case"
                android:textColor="@color/primaryTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxNumbers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:text="@string/numbers"
                android:textColor="@color/primaryTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:text="@string/symbols"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:hint="@string/_symbols"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/length"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/primaryTextColor"
                android:background="@drawable/input_length"/>

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/custom_sign_button"
                android:text="@string/minus"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_sign_button"
                android:text="@string/plus"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGenerate"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_generate_button"
                android:text="@string/generate"
                android:textColor="@color/secondaryTextColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/savePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <View
                android:id="@+id/dividerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_launcher_background" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:background="@drawable/custom_input_password" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:background="@drawable/custom_input_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_ok_button"
                    android:text="@string/cancel"
                    android:textColor="@color/secondaryTextColor" />

                <Button
                    android:id="@+id/buttonSave"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_ok_button"
                    android:text="@string/save"
                    android:textColor="@color/secondaryTextColor" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>