<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="30dp"
    tools:context=".SetLoginPasswordActivity">

    <TextView
        android:id="@+id/textViewEnter2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_password"
        android:textColor="@color/primaryTextColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSetPass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSetPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        android:background="@drawable/custom_input_password"
        app:layout_constraintBottom_toTopOf="@+id/editTextSetPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnter2" />

    <EditText
        android:id="@+id/editTextSetPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/old_password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        android:background="@drawable/custom_input_password"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSetPass1" />

    <Button
        android:id="@+id/buttonSetOk"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_ok_button"
        android:text="@android:string/ok"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSetPass2" />

</androidx.constraintlayout.widget.ConstraintLayout>